--- a/style.css
+++ b/style.css
@@ -1,21 +1,14 @@
 
-body {
-    background-image: url("./images/wallpaper.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height:100vh;  /* responsive height */
-}
+
        
 #contenitore {
     display: block;
+    margin: 0 auto;
     height: 800px;
     width: 650px;
-    float: right;
-    border: solid 2px black; 
+    border: solid 2px black;
     color: white;
-    background-color: rgb(179, 191, 209);  
+    background-color: rgb(179, 191, 209); 
     }
 
 #counter{
